--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "baselines"]
 	path = baselines
 	url = git@github.com:openai/baselines.git
+[submodule "stable-baselines"]
+	path = stable-baselines
+	url = git@github.com:hill-a/stable-baselines.git
+[submodule "rl-baselines-zoo"]
+	path = rl-baselines-zoo
+	url = git@github.com:araffin/rl-baselines-zoo.git
